feat: 改进事件系统与全局快捷键 (#62)